--- a/Notebook/Kaggle - Titanic.ipynb
+++ b/Notebook/Kaggle - Titanic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -18,6 +18,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import csv as csv\n",
+    "import sys\n",
+    "#set PYTHONPATH\n",
+    "sys.path.append('C:/Users/User/Desktop/datasciences_tools/')\n",
     "\n",
     "import os\n",
     "from time import time\n",
@@ -28,7 +31,7 @@
     "from sklearn.tree import *\n",
     "from sklearn.pipeline import Pipeline, make_pipeline, FeatureUnion\n",
     "from sklearn import linear_model as lm\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier, ExtraTreesClassifier\n",
     "from sklearn.svm import SVC, LinearSVC\n",
     "import sklearn.svm as svm\n",
     "from sklearn.preprocessing import *\n",
@@ -41,9 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -52,7 +55,7 @@
        "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -80,12 +83,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\IPython\\kernel\\__main__.py:14: SettingWithCopyWarning: \n",
+      "C:\\Anaconda3\\lib\\site-packages\\IPython\\kernel\\__main__.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "C:\\Anaconda3\\lib\\site-packages\\IPython\\kernel\\__main__.py:15: SettingWithCopyWarning: \n",
+      "C:\\Anaconda3\\lib\\site-packages\\IPython\\kernel\\__main__.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -94,8 +97,10 @@
     }
    ],
    "source": [
-    "train = pd.read_csv(\"M:/datasciences/Projets/Kaggle/Titanic/train.csv\")\n",
-    "test = pd.read_csv(\"M:/datasciences/Projets/Kaggle/Titanic/test.csv\")\n",
+    "#train = pd.read_csv(\"M:/datasciences/Projets/Kaggle/Titanic/train.csv\")\n",
+    "#test = pd.read_csv(\"M:/datasciences/Projets/Kaggle/Titanic/test.csv\")\n",
+    "train = pd.read_csv(\"C:/Users/User/Desktop/datasciences_tools/data/train.csv\")\n",
+    "test = pd.read_csv(\"C:/Users/User/Desktop/datasciences_tools/data/test.csv\")\n",
     "\n",
     "## NA imputation\n",
     "feature_columns_to_use = ['Pclass', 'Sex', 'Age', 'Fare', 'Parch', 'Embarked', 'SibSp']\n",
@@ -501,9 +506,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -528,14 +533,13 @@
     "              }\n",
     "\n",
     "param_grid_ada = {\n",
-    "            'n_estimators': [15,20,25,30,35,40,45],\n",
+    "            'n_estimators': [15, 20, 25, 30, 35, 40, 45, 100],\n",
     "            'learning_rate': [0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0],\n",
-    "            'max_features': [1, 3, 5, 6]\n",
-    "            'max_depth': [\n",
+    "            'random_state' : [10,20,30,40,50,70,80,90]\n",
     "            }\n",
     "\n",
     "param_ExtraTrees = {\n",
-    "            'n_estimators': [100,200,300,400,500,600,700,1000]\n",
+    "            'n_estimators': [100,200,300,400,500,600,700,1000],\n",
     "            'max_depth': [1, 2, 5, 7, 10],\n",
     "            'min_samples_leaf': [1, 2 , 5, 7, 10],\n",
     "            'min_samples_split': [1, 2 , 5, 7, 10]\n",
@@ -654,7 +658,7 @@
    "source": [
     "GBR = GradientBoostingClassifier()\n",
     "start_time = time()\n",
-    "grid_search = GridSearchCV(GBR, param_grid_GBR, n_jobs=12).fit(train_X, train_Y)\n",
+    "grid_search = GridSearchCV(GBR, param_grid_ada, n_jobs=12).fit(train_X, train_Y)\n",
     "end_time = time()\n",
     "print('It took {} seconds'.format(end_time - start_time))\n",
     "report_grid(grid_search.grid_scores_)"
@@ -662,13 +666,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It took 5.360306024551392 seconds\n",
+      "Model with rank: 1\n",
+      "Mean validation score: 0.801 (std: 0.029)\n",
+      "Parameters: {'learning_rate': 0.5, 'n_estimators': 45}\n",
+      "\n",
+      "Model with rank: 2\n",
+      "Mean validation score: 0.801 (std: 0.034)\n",
+      "Parameters: {'learning_rate': 0.8, 'n_estimators': 45}\n",
+      "\n",
+      "Model with rank: 3\n",
+      "Mean validation score: 0.801 (std: 0.029)\n",
+      "Parameters: {'learning_rate': 0.8, 'n_estimators': 100}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "adaboost = AdaBoostClassifier(\n",
+    "best_adaboost = AdaBoostClassifier(\n",
     "        n_estimators = 20,\n",
     "        learning_rate = 0.75,\n",
     "        base_estimator = ExtraTreesClassifier(\n",
@@ -678,7 +702,60 @@
     "            min_samples_leaf = 100,\n",
     "            min_samples_split = 100,\n",
     "            verbose = 1,\n",
-    "            n_jobs = -1))"
+    "            n_jobs = -1))\n",
+    "Pipe = Pipeline([('ada', adaboost), ('extra', extratree)])\n",
+    "\n",
+    "adaboost = AdaBoostClassifier()\n",
+    "start_time = time()\n",
+    "grid_search = GridSearchCV(adaboost, param_grid_ada, n_jobs=12).fit(train_X, train_Y)\n",
+    "end_time = time()\n",
+    "print('It took {} seconds'.format(end_time - start_time))\n",
+    "report_grid(grid_search.grid_scores_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It took 531.8144180774689 seconds\n",
+      "Model with rank: 1\n",
+      "Mean validation score: 0.826 (std: 0.017)\n",
+      "Parameters: {'learning_rate': 0.3, 'n_estimators': 15, 'random_state': 20}\n",
+      "\n",
+      "Model with rank: 2\n",
+      "Mean validation score: 0.823 (std: 0.014)\n",
+      "Parameters: {'learning_rate': 0.3, 'n_estimators': 15, 'random_state': 90}\n",
+      "\n",
+      "Model with rank: 3\n",
+      "Mean validation score: 0.823 (std: 0.018)\n",
+      "Parameters: {'learning_rate': 0.4, 'n_estimators': 15, 'random_state': 70}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_rf = RandomForestClassifier(n_estimators = 50,\n",
+    "                                  max_depth = None,\n",
+    "                                  min_samples_leaf = 3,\n",
+    "                                  max_features = 3,\n",
+    "                                  min_samples_split = 10,\n",
+    "                                  bootstrap = True,\n",
+    "                                  criterion = \"entropy\")\n",
+    "\n",
+    "ada_rf = AdaBoostClassifier(best_rf, n_estimators=4, random_state=93)\n",
+    "\n",
+    "start_time = time()\n",
+    "grid_search = GridSearchCV(ada_rf, param_grid_ada, n_jobs=12).fit(train_X, train_Y)\n",
+    "end_time = time()\n",
+    "print('It took {} seconds'.format(end_time - start_time))\n",
+    "report_grid(grid_search.grid_scores_)"
    ]
   },
   {
